comitt projet final

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <li><a href="https://github.com/elbissousa27">GitHub →</a></li>
         </ul>
     </nav>
-    <section class="grid-section animais" id="animais">
+    <section class="grid-section animais js-scroll" id="animais">
         <h1 class="titulo">Animais Fantasticos</h1>
         <ul class="animais-lista js-tabmenu">
             <li>
@@ -124,7 +124,7 @@
             </section>
         </div>
     </section>
-    <section class="grid-section faq" id="faq">
+    <section class="grid-section faq js-scroll" id="faq">
         <h1 class="titulo">FAQ</h1>
         <dl class="faqLista js-accordion">
             <dt>Qual a idade dos animais?</dt>
@@ -146,7 +146,7 @@
         </dl>
     </section>
 
-    <section class="grid-section contatos" id="contato">
+    <section class="grid-section contatos js-scroll" id="contato">
         <h1 class="titulo">Contatos</h1>
         <div class="mapa">
             <img src="/img/mapa.png">
